feat: initial set up - header bar, nav bar, and image set

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
   <body>
+    <div class="header">
+      <header><h1>5280 Landmarks</h1> <h2>Login</h2></header>
+    </div>
+    <div class="nav">
+      <nav><h2>Building Art Featured</h2></nav>
+    </div>
+    <div class ="body">
+      <div class="main">
+          <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
+            alt="Denver art Museum with Blue Sky" style="width:1200px;height:800px;">
+            <h3>
+              Denver Art Museum
+            </h3>
+      </div>
+
+    </div>
 
   </body>
 </html>
