feat: css progress, still figuring out sizing formatting

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <title>5280 Landmarks</title>
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+
+    <header>
+      <div class="myheader">
+          <h1><a>5280 Landmarks</a></h1>
+          <h2><b>Login</b></h2>
+
+      </div>
+    </header>
+    <div class="mynav">
+      <nav>
+        <h2>Building Art Featured</h2>
+      </nav>
+    </div>
   </head>
   <body>
-    <div class="header">
-      <header><h1>5280 Landmarks</h1> <h2>Login</h2></header>
-    </div>
-    <div class="nav">
-      <nav><h2>Building Art Featured</h2></nav>
-    </div>
     <div class ="body">
       <div class="main">
           <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
