progress: trying to work through placing both items on same bar with different text sizes

--- a/index.html
+++ b/index.html
@@ -1,39 +1,45 @@
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <title>5280 Landmarks</title>
-    <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
-    <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <header>
-      <div class="myheader">
-          <h1><a>5280 Landmarks</a></h1>
-          <h2><b>Login</b></h2>
+  <title>5280 Landmarks</title>
+  <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
+  <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
 
+  <header>
+    <div class="#myheader">
+      <div>
+        <a>
+          5280 Landmarks
+        </a>
       </div>
-    </header>
-    <div class="mynav">
-      <nav>
-        <h2>Building Art Featured</h2>
-      </nav>
-    </div>
-  </head>
-  <body>
-    <div class ="body">
-      <div class="main">
-          <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
-            alt="Denver art Museum with Blue Sky" style="width:1200px;height:800px;">
-            <h3>
-              Denver Art Museum
-            </h3>
+      <div>
+        <b>
+          Login
+        </b>
       </div>
+    </div>
+  </header>
+  <div class="#mynav">
+    <nav>
+      <h2>Building Art Featured</h2>
+    </nav>
+  </div>
+</head>
 
+<body>
+  <div class="body">
+    <div class="main">
+      <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
+        alt="Denver art Museum with Blue Sky" style="width:1200px;height:800px;">
+      <h3>
+        Denver Art Museum
+      </h3>
     </div>
 
-  </body>
+  </div>
+
+</body>
+
 </html>
-
-
-
-
