attempts: trying to adjust the spacing on the page, swapped div for span

--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
 
 <body>
   <div class="body">
-    <div class="main">
+    <span class="main">
       <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
-        alt="Denver art Museum with Blue Sky" style="width:1200px;height:800px;">
+        alt="Denver art Museum with Blue Sky" style="width:600px;height:400px;">
       <h3>
         Denver Art Museum
       </h3>
-    </div>
-
+    </span>
+    <span class="column">
+      Is this one the right
+    </span>
   </div>
 
 </body>
