feat: fixed title bar, need to move login

--- a/index.html
+++ b/index.html
@@ -8,24 +8,10 @@
   <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
 
   <header>
-    <div class="#myheader">
-      <div>
-        <a>
-          5280 Landmarks
-        </a>
-      </div>
-      <div>
-        <b>
-          Login
-        </b>
-      </div>
-    </div>
+    <h1>5280 Landmarks <span class="login">Login</span></h1>
   </header>
-  <div class="#mynav">
-    <nav>
-      <h2>Building Art Featured</h2>
-    </nav>
-  </div>
+
+
 </head>
 
 <body>
