feat: nav bar complete, login refusing to turn white as designated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
 
   <header>
-    <h1>5280 Landmarks <span class="login">Login</span></h1>
+    <h1>5280 Landmarks <span class="login"><a href="login_placeholder">Login</span></h1>
   </header>
 
 
