--- a/index.html
+++ b/index.html
@@ -7,22 +7,39 @@
   <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
   <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
 
-  <header>
+  <header class="Top">
     <h1>5280 Landmarks <span class="login"><a href="login_placeholder">Login</span></h1>
   </header>
-
-
+  <header class="Middle">
+    <ul>
+      <li><a href="building_placeholder">Building</a></li>
+      <li><a href="art_placeholder">Art</a></li>
+      <li><a href="featured_placeholder">Featured</a></li>
+    </ul>
+  </header>
 </head>
-
 <body>
   <div class="body">
     <span class="main">
       <img src="https://github.com/SandyyMarie/static_challenges/blob/master/images/1.jpg?raw=true"
         alt="Denver art Museum with Blue Sky" style="width:600px;height:400px;">
-      <h3>
-        Denver Art Museum
-      </h3>
-    </span>
+      <h2>Denver Art Museum</h2>
+      <p>Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri, sed ex graeci prompta
+        sapientem. Cum in verterem partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant. At qui doming nemore
+        mediocritatem, ei pri bonorum blandit, vim elitr recusabo salutatus eu.
+      </p><br>
+      <p>Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea, an ignota signiferumque nec.
+        No dicunt sanctus moderatius sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea
+        solet placerat phaedrum vis. Et vix causae aliquam, commodo blandit imperdiet ex his.
+      </p><br>
+      <p>Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque. Eu pri reque
+        sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.
+      </p><br>
+      <p>Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas. Eam choro eloquentiam eu, vim cu facete
+        scriptorem. Mel at latine veritus.
+      </p><br>
+      <br>
+
     <span class="column">
       Is this one the right
     </span>
