--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
       <br>
 
     <span class="column">
-      Is this one the right
+      Testing to check if can move to the right side of page
     </span>
   </div>
 
 </body>
-
+<footer>
+  <p>
+    Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit forensibus comprehensam. Mel te primis
+    commodo, nibh labore nostrum ei mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea lobortis
+    pertinacia, scripta sententiae et mei, sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea, vis
+    malis clita efficiantur ut. At vel lorem paulo soluta, ancillae quaestio no quo, id vim blandit voluptatum.
+  </p>
+</footer>
 </html>
